# insurance-covariate-shift

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: benchmark_insurance_covariate_shift.py  run_benchmark.py
notebooks/: benchmark_covariate_shift.py  benchmark_shift_diagnostic.py  insurance_covariate_shift_demo.py
src/insurance_covariate_shift/: __init__.py  _types.py  adaptor.py  conformal.py  density_ratio.py  report.py
tests/: test_adaptor.py  test_adaptor_extended.py  test_conformal.py  test_conformal_extended.py  test_density_ratio.py  test_density_ratio_extended.py  test_extra_coverage.py  test_integration.py  test_report.py  test_report_extended.py  test_types.py  test_types_extended.py
