[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-covariate-shift"
version = "0.1.3"
description = "Density ratio correction for insurance pricing model portability across different book distributions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "covariate-shift",
    "density-ratio",
    "conformal-prediction",
    "pricing",
    "actuarial",
    "UK",
    "personal lines",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "catboost>=1.2",
    "matplotlib>=3.7",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-covariate-shift"
Repository = "https://github.com/burning-cost/insurance-covariate-shift"
"Bug Tracker" = "https://github.com/burning-cost/insurance-covariate-shift/issues"
Documentation = "https://github.com/burning-cost/insurance-covariate-shift#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_covariate_shift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
